--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -27,11 +28,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.1",
+    "@angular-eslint/builder": "16.3.1",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/schematics": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
     "@angular/cli": "^16.0.1",
     "@angular/compiler-cli": "^16.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^16.11.35",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "copyfiles": "^2.4.1",
+    "eslint": "^8.51.0",
     "jasmine-core": "~4.5.0",
     "jasmine-marbles": "~0.9.2",
     "jasmine-spec-reporter": "~7.0.0",
@@ -40,6 +49,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^3.3.2",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
     "typescript": "~5.0.4"
